# paint-by-number

./: .gitignore  README.md  TASKS.md  prompt.md  pyproject.toml
src/pbn/: __main__.py  cli.py  edges.py  io.py  labels.py  pipeline.py  print_size.py  quantize.py  regions.py  render.py  saliency.py  segment.py
tests/: test_cli.py  test_edges.py  test_io.py  test_labels.py  test_merge.py  test_pipeline.py  test_print_size.py  test_quantize.py  test_regions.py  test_render.py  test_saliency.py  test_segment.py
