[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pbn"
version = "0.1.0"
description = "Paint-by-number template generator"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "Pillow",
    "scikit-image",
    "scikit-learn",
    "scipy",
]

[project.optional-dependencies]
# Enables --smooth meanshift and --saliency auto (cv2.saliency). Without it,
# --saliency auto silently falls back to a Sobel-magnitude weight map.
opencv = ["opencv-contrib-python"]

[project.scripts]
pbn = "pbn.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
